@@ -4,6 +4,7 @@ v0.1.5
 - Use the native Die2Nite tooltips
 - Remove the soul distinctions scrollbar
 - Add a bank anti-abuse counter/protection
+- Add Dailymotion and Vimeo to the recognized media links
 
 v0.1.4
 - Construction_max_ap now works with repairs
